--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 200, 245, 230;
+  --background-start-rgb: 224, 239, 240;
+  --background-end-rgb: 155, 215, 245;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -18,8 +18,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: radial-gradient(
+      to middle,
       transparent,
       rgb(var(--background-end-rgb))
     )
